# sample-project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ResourceRoot.ini  ResourceRoot.txt
.github/workflows/: deploy.yml
Launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h  LauncherHost.cpp
Project/: Project.json
Project/Data/: Default.AssetPipeline.json  EngineParameters.json
Project/Data/Materials/: Checkboard.xml  CubeLimestone.xml  CubeMetallic.xml  CubePlastic.xml
Project/Data/Scenes/: Scene.xml
Project/Data/UI/: MainMenu.rml
Script/: build-wasm32-emscripten-j8.bat  ci_build.sh  configure-wasm32-emscripten-mingw.bat  configure-wasm32-emscripten-ninja.bat  configure-x64-uwp-vs2022.bat  configure-x64-windows-vs2022.bat  msvc_configure.bat  web_build.bat  web_configure.bat  web_configure_mingw.bat  web_configure_ninja.bat
Scripts/: web-build.bat  web-configure.bat
Source/: CMakeLists.txt  MenuGameScreen.cpp  MenuGameScreen.h  SampleGameScreen.cpp  SampleGameScreen.h  SampleProject.cpp  SampleProject.h
Source/Application/: CMakeLists.txt  MenuGameScreen.cpp  SampleGameScreen.cpp  SampleProject.cpp  SampleProject.h
Source/Editor/: CMakeLists.txt  CreateRandomBox.h  Editor.cpp
Source/Launcher/: CMakeLists.txt  Launcher.cpp
StoreArt/UWP/: package.appxManifest.in
android/: build.gradle
android/src/io/urho3d/: UrhoActivity.java
